Fix parry crashing server