@@ -1,8 +1,7 @@
 package henrykado.gaiablossom;
 
-import java.util.Arrays;
+import java.util.List;
 
-import net.minecraft.world.biome.BiomeGenBase;
 import net.minecraft.world.gen.structure.MapGenVillage;
 import net.minecraftforge.common.MinecraftForge;
 
@@ -29,7 +28,7 @@ public class CommonProxy {
     public void preInit(FMLPreInitializationEvent event) {
         Config.synchronizeConfigurationLate();
 
-        if (Config.disableVillages) MapGenVillage.villageSpawnBiomes = Arrays.asList(new BiomeGenBase[] {});
+        if (Config.disableVillages) MapGenVillage.villageSpawnBiomes = List.of();
 
         // ModItems.init();
         ModBlock.registerEmBlocks();
@@ -64,6 +63,9 @@ public class CommonProxy {
         // ModEntityList.init();
 
         // AetherAPI.instance().register(new AetherEnchantment());
+
+        // BiomeDictionary.registerBiomeType(biome, BiomeDictionary.Type.FOREST);
+        // BiomeManager.addBiome();
     }
 
     // postInit "Handle interaction with other mods, complete your setup based on this." (Remove if not needed)
